Resolved long bugs. Make ajax call with application/json.